hphp/hack/test/typecheck/parse_float_with_underscore_bad1.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class BigNumbersRUs {
  const float fp1 = 1_.4;
}
